--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,10 @@
   <!--stickey kit -->
   <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
   <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
+
+  <!-- nf Charts-->
+  <!-- <script src="node_modules/chart.js/src/chart.js"></script> -->
+
   <!--Custom JavaScript -->
   <script src="assets/js/custom.min.js"></script>
 </body>
