--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!-- Custom CSS -->
   <link href="assets/css/style.css" rel="stylesheet">
   <!-- You can change the theme colors from here -->
-  <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+  <link href="" id="tema" rel="stylesheet">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +45,7 @@
   <!-- <script src="node_modules/chart.js/src/chart.js"></script> -->
 
   <!--Custom JavaScript -->
-  <script src="assets/js/custom.min.js"></script>
+  <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
